<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Our Trips</string>
    <!--    titles  -->
    <string name="title_activity_login">Our Trips</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_edit">Edit Profile</string>
    <string name="title_activity_verify">Create Account</string>
    <string name="title_activity_trip">Trip</string>
    <string name="title_activity_main">Our Trips</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_findFriends">Find Friends</string>
    <string name="title_fragment_summary">Trip Summary</string>
    <string name="title_fragment_plan">Plans</string>
    <string name="title_fragment_media">Shared Media</string>
    <string name="title_fragment_trippers">Trippers</string>
    <!--    messages  -->
    <string name="invalid_username">Invalid email</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="required_field">This field is required</string>
    <string name="required_gender">Gender is required</string>
    <string name="email_not_valid">This email is already taken</string>
    <string name="string_register_failure">We were not able to register your account. Are you sure you entered everything correctly?</string>
    <string name="string_register_success">You have registered successfully!</string>
    <string name="string_update_profile">Your profile has been updated!</string>
    <string name="update_profile_fail">Your profile could not be updated. Check that you have filled all the required fields.</string>
    <string name="toast_registered">Registered successfully!</string>
    <string name="toast_profileUpdated">Profile updated successfully</string>
    <string name="message_important_access">The requested permission is necessary for the app to run properly</string>
    <string name="trip_cal_select">Select dates where you are available to go on a trip!</string>
    <string name="not_registered">Your email is verified but you have not registered, please click Sign Up to create an account</string>
    <string name="need_to_verify">Please follow the link that we sent to you in order to verify your email address</string>
    <string name="available_match">Click on a friend to find dates that you are both available</string>
    <!--    prompts  -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in">Sign In</string>
    <string name="change_pic_text">Change Picture</string>
    <string name="name_text">Name</string>
    <string name="female_text">Female</string>
    <string name="male_text">Male</string>
    <string name="other_text">Other</string>
    <string name="prompt_affiliation">Affiliation</string>
    <string name="prompt_birthday">Birthday</string>
    <string name="prompt_register">Register</string>
    <string name="prompt_update">Update</string>
    <string name="verify_email_string">Verify Email / Register Account</string>
    <string name="profile_picture_string">Profile Picture</string>
    <string name="prompt_grantAccess">Grant Access</string>
    <string name="prompt_dismiss">Dismiss</string>
    <string name="prompt_summary">Summary</string>
    <string name="prompt_plan">Plan</string>
    <string name="prompt_media">Media</string>
    <string name="prompt_trippers">Trippers</string>
    <string name="settings_text">Settings</string>
    <string name="edit_profile_text">"Edit Profile "</string>
    <string name="cal_save">Save</string>
    <string name="header_account_settings">Account Settings</string>
    <string name="prompt_data_collect">Posting your data anonymously</string>
    <string name="privacy">Privacy</string>
    <string name="update_dates_text">Select Dates</string>
    <string name="loading_your_dates">Loading your dates…</string>
    <string name="fcm_notification_channel">firebase_notify</string>
    <string name="string_send_request">create request</string>
    <string name="find_friends">Find Friends</string>
    <string name="pending_requests">Pending requests:</string>
    <string name="preferences">profile_prefs</string>
    <string name="loading_friend_requests" tools:ignore="TypographyEllipsis">Loading friend requests...</string>
    <string name="no_req">No friend requests.</string>
    <string name="search_for_a_friend" tools:ignore="TypographyEllipsis">Enter a friend\'s name or email...</string>
    <string name="search">Search</string>
    <string name="match_dates">Arrange Trip</string>
    <string name="loading_friends" tools:ignore="TypographyEllipsis">Loading friends...</string>
    <string name="matching" tools:ignore="TypographyEllipsis">Matching...</string>
    <string name="loading_your_trips" tools:ignore="TypographyEllipsis">Loading your trips...</string>
    <string name="view_or_edit">Click on a trip to view or edit</string>
    <string name="click_matched">Click on a matched date to arrange a trip!</string>
    <string name="permission_denied">You have denied permission</string>
    <string name="permission_settings">In order to use the camera you must give camera and storage permissions in settings.</string>
    <string name="go_settings">Go to settings</string>
    <string name="trip_title">Trip Title</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="select">Select</string>
    <string name="friend">Friend:</string>
    <string name="save">save</string>
    <string name="sort">Sort</string>
    <string name="enter_trip_title" tools:ignore="TypographyEllipsis">Enter the title of a trip...</string>
    <string name="gallery_item">gallery item</string>
    <string name="gear">gear</string>
    <string name="pictures">pictures</string>
    <string name="videos">videos</string>
    <string name="bio">Bio</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="photo_gallery">Photo Gallery</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_video">Add Video</string>
    <string name="loading_trip" tools:ignore="TypographyEllipsis">Loading trip...</string>
    <string name="edit">Edit Trip Info</string>
    <string name="overview">Overview:</string>
    <string name="change">Change</string>
    <string name="view_map">View Map</string>
    <string name="adding_to_the_gallery" tools:ignore="TypographyEllipsis">Adding to the gallery...</string>
    <string name="loading_photos" tools:ignore="TypographyEllipsis">Loading photos...</string>
    <string name="delete">Delete</string>
    <string name="deleting" tools:ignore="TypographyEllipsis">Deleting...</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_settings">In order to use the map you must allow location access in device settings.</string>
    <string name="permission_required">Permission is required</string>
    <string name="enable_location">In order to use the map you must allow location access.</string>
    <string name="allow">Allow</string>
    <string name="add_location">Add Location</string>
    <string name="remove_location">Remove Location</string>
    <string name="cancel">Cancel</string>
    <string name="remove_marker">Long-press the info window of a location marker to remove it.</string>
    <string name="enter_name_location">Enter a location name.</string>
    <string name="long_press_the_map_to_add_a_marker">Long-press the map to add a marker.</string>
    <string name="save_map">Save Map</string>
    <string name="click_on_a_tripper_to_view_their_profile">Click on a tripper to view their profile</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="birthday">BirthDay:</string>
    <string name="affiliation">Affiliation:</string>
    <string name="bio_view">Bio:</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="add_tripper">Add Tripper</string>
    <string name="add_tripper_friend">Click on a friend to add them to the trip!</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="non_reversible">Are you sure you want to delete this trip? Deleting a trip is not reversible, all of this trip\'s information will be deleted.</string>
    <string name="are_you_sure">Are you sure???</string>
    <string name="long_press_a_trip_to_remove_it">Long-press a trip to remove it</string>
    <string name="remove_self_from_trip">Are you sure you want to remove yourself from this trip? This action is not reversible.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="check_out_the_website">Check out the website!</string>
    <string name="our_trips_logo">Our trips logo</string>
    <string name="vector">vector</string>
    <string name="app_website">App Website</string>
    <string name="are_you_sure_profile">Are you sure you want to delete your profile? This action is not reversible.</string>
    <string name="enter_creds">Enter your email and password</string>
    <string name="recognize_location">Recognize Location</string>
    <string name="press_a_pic_to_view_it">Press a pic to view it</string>
    <string name="long_press_pic">Long-press a pic for location recognition</string>
    <string name="post_photo">Post Photo</string>
    <string name="adding_to_trip">Adding to trip...</string>
    <string name="deleting_your_profile">Deleting your profile...</string>
    <string name="deleting_trip">Deleting trip...</string>
</resources>
