<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewUserActivity"
    android:background="@color/colorSecondaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="@dimen/img_side_dp"
            android:layout_height="@dimen/img_side_dp"
            android:layout_marginTop="@dimen/top_vertical_margin"
            android:contentDescription="@string/profile_picture_string"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_user"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:paddingHorizontal="@dimen/padding_dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/name_header" />

        <TextView
            android:id="@+id/email_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:paddingHorizontal="@dimen/padding_dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/email_header" />

        <TextView
            android:id="@+id/birthday_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:text="@string/birthday"/>

        <TextView
            android:id="@+id/user_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_birthday"
            android:paddingHorizontal="@dimen/padding_dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/birthday_header" />

        <TextView
            android:id="@+id/aff_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_birthday"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:text="@string/affiliation"/>

        <TextView
            android:id="@+id/user_affiliation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_affiliation"
            android:paddingHorizontal="@dimen/padding_dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/aff_header" />

        <TextView
            android:id="@+id/bio_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_affiliation"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:text="@string/bio_view"/>

        <TextView
            android:id="@+id/user_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bio"
            android:paddingHorizontal="@dimen/padding_dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@id/bio_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>