<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestTripActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_title"
            android:inputType="textCapWords"
            android:singleLine="true"
            android:textSize="20sp"
            android:textColorHint="@color/colorSecondaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/start_date_text"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/input_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_date"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/end_date_text"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/start_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/select_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/end_date_text"
        app:layout_constraintBottom_toBottomOf="@+id/end_date_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/select" />

    <TextView
        android:id="@+id/friend_info_text"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/end_date_text"
        android:text="@string/friend"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>